# gilg_utilities

./: README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
gilg_utils/: general.py  jane_models.py  jane_processors.py  models.py
gilg_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gilg_utils/.ipynb_checkpoints/: general-checkpoint.py
